--------------------------------------------------------------------------------
 Fusion 1.213 - November 12th, 2004
--------------------------------------------------------------------------------
- 12-05-04: Fixed Fusion form yet again. Stop committing main.dfm and update the cvs first. [AlexKreuz]
- 12-03-04: Revived my #call_mercenary beta/mercenary system.  (Still in Beta) [Darkhelmet]
- 12-01-04: Removed redundant line in universal broadcast procedure. [Tsusai]
- 12-01-04: Restructured script.pas to share procedures for similar commands. [Tsusai]
- 12-01-04: Removed universal warp procedure. [Tsusai]
- 12-01-04: Increased MaxJob# to allow baby classes (No Skills). [Tsusai]
- 12-01-04: Fixed Fusion form again. [AlexKreuz]
- 12-01-04: Undid dependancy of weiss.ini autoupdate on release version. [AlexKreuz]
- 11-30-04: Checkstr can now also check case sensitive strings (==). [Tsusai]
- 11-30-04: Added cebuPH's inputc as inputstr. [Tsusai]
- 11-30-04: Removed madscreenshot (my bad). [Tsusai]
- 11-30-04: Weiss.ini auto-update now depends on the release version. [Tsusai]
- 11-28-04: Fixed UPnP & WAC errors as reported in R. [AlexKreuz]
- 11-27-04: Non existant character in ActiveChars caused crash. [AlexKreuz]
- 11-26-04: Auto-updating of weiss.ini. [AlexKreuz]
- 11-26-04: Undefined map caused crash for Doubel Strafe (PSS). [AlexKreuz]
- 11-26-04: Fixed PVP Disconnect calculation problems. [AlexKreuz]
- 11-26-04: Re-enabled PVP. Minor cleanup. [AlexKreuz]
- 11-26-04: Cleaned up JCon Characters tab. [AlexKreuz]
- 11-22-04: Added reseteventmob. [Tsusai]
- 11-22-04: Removed an unused unit 'jpeg'. [Tsusai]
- 11-18-04: Added a universal warp procedure. [Tsusai]
- 11-18-04: Added a possible universal broadcast procedure. [Tsusai]
- 11-17-04: Fixed areabroadcast's area component. [Tsusai]
- 11-16-04: Added some error processing for UPnP. [Tsusai]
- 11-14-04: Fixed Bug with PSS, map was not defined.  [Darkhelmet]